--- a/provision/nginx-wp.conf
+++ b/provision/nginx-wp.conf
@@ -7,7 +7,7 @@ server {
         ## Your website name goes here.
         server_name domain.tld;
         ## Your only path reference.
-        root /var/www/wordpress;
+        root /var/www/html/wordpress;
         ## This should be in your http block and if it is, it's not needed here.
         index index.php;
 
